 (Format: Year/Month/Day)
Changes for 1.0.0:
*07/03/31:
   * Default value for $LAUNCHER, plus add util and util/fbrun to the 
     PATH when generating install menu so it can find fbrun (Simon)
     fluxbox-generate_menu.in Makefile.am data/Makefile.am
   * Make fluxbox-generate_menu emit [encoding] tags around all of its
     menus. Please check that it is the right encoding, I had to guess
     some as it wasn't recorded (Simon)
     util/fluxbox-generate_menu.in
*07/03/30:
   * Added fi_FI support (Thanks Pasi Juvonen, loudvr at yahoo ca)
    nls/fi_FI/*, util/fluxbox-generate_menu.in
*07/03/28:
   * Startup file wasn't being run properly when created the first time (Mark)
     util/startfluxbox.in
*07/03/24:
   * Updated French translations (thanks Ulrich Etile)
     nls/fr_FR/Translation.m
   * Fixed a little bug in fbsetbg (Mark)
     util/fbsetbg
   * Workspace Menu wasn't updating when windows changed titles (Mark)
     Workspace.cc
*07/03/21:
   * HideMenus didn't work on CustomMenus, and also fixed a memleak with
     CustomMenu (Mark + thanks Julien Trolet)
     FbCommands.cc/hh
--------------------------------	
Changes for 1.0rc3:
*07/03/20:
   * Updated doc/asciidoc/fluxbox.txt (Mathias)
*07/03/19:
   * Active menu item wasn't getting reset properly when menu closed (Mark)
     FbTk/Menu.cc
   * Fixed some problems with toolbar sizing (Mark + thanks Julien Trolet)
     Toolbar.cc
*07/03/18:
   * Changed position remembering so it only remembers position relative to the
     current head (Mark)
     Remember.cc
   * Fixed problem with new mouse binding code when using emacs keychains (Mark)
     Keys.hh
*07/03/17:
   * Iconified, stuck windows weren't being moved to different workspaces (Mark)
     Screen.cc
*07/03/16:
   * Maximizing a window with aspect ratio requirements was making windows too
     large (thanks Tomas Janousek)
     Window.cc/hh WinClient.cc/hh
   * Added key command to open a custom menu file (thanks Matteo Galiazzo)