@@ -1,6 +1,9 @@
  (Format: Year/Month/Day)
 Changes for 1.0.0:
 *07/03/31:
+   * Fix window menu context when opened by clicking on tab (Simon)
+     sf.net bug #1652185
+     Window.hh/cc
    * Default value for $LAUNCHER, plus add util and util/fbrun to the 
      PATH when generating install menu so it can find fbrun (Simon)
      fluxbox-generate_menu.in Makefile.am data/Makefile.am
